force-app/main/default/objects/Book_Author__c/Book_Author__c.object-meta.xml
<CustomObject>
    <description>Junction object for Book and Author</description>
    <label>Book_Author</label>
    <nameField>
        <label>Book_Author S No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book_Authors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>