force-app/main/default/objects/Book_Author__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <referenceTo>Author__c</referenceTo>
    <relationshipLabel>Book_Authors</relationshipLabel>
    <relationshipName>Book_Authors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>