force-app/main/default/objects/Book_Author__c/fields/MRP__c.field-meta.xml
<CustomField>
    <fullName>MRP__c</fullName>
    <description>Maximum Retail Price for the Books and its editions</description>
    <label>MRP</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>