force-app/main/default/objects/Book_Author__c/validationRules/Validate_Edition_year.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Edition_year</fullName>
    <active>true</active>
    <errorConditionFormula>!(Edition__c  &gt;=  1900  &amp;&amp;  Edition__c  &lt;=  2020)</errorConditionFormula>
    <errorDisplayField>Edition__c</errorDisplayField>
    <errorMessage>Edition year must be between 1900 to 2020</errorMessage>
</ValidationRule>