force-app/main/default/objects/Book_Author__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MRP__c</columns>
    <columns>Edition__c</columns>
    <columns>Book_Count__c</columns>
    <columns>Book__c</columns>
    <columns>Author__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>